[gd_scene load_steps=8 format=2]

[ext_resource path="res://source/level/Level.gd" type="Script" id=1]
[ext_resource path="res://graphics/tilesets/background.tres" type="TileSet" id=2]
[ext_resource path="res://graphics/tilesets/terrain.tres" type="TileSet" id=3]
[ext_resource path="res://source/level/Terrain.gd" type="Script" id=4]
[ext_resource path="res://source/character/player/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://source/camera/GameCam.tscn" type="PackedScene" id=6]
[ext_resource path="res://source/interface/hud/Interface.tscn" type="PackedScene" id=7]

[node name="Level" type="Node2D"]
script = ExtResource( 1 )

[node name="InfiniteBlackness" type="ParallaxBackground" parent="."]
layer = -2

[node name="ParallaxLayer" type="ParallaxLayer" parent="InfiniteBlackness"]
motion_mirroring = Vector2( 640, 360 )

[node name="ColorRect" type="ColorRect" parent="InfiniteBlackness/ParallaxLayer"]
margin_right = 640.0
margin_bottom = 360.0
color = Color( 0.054902, 0.0470588, 0.0470588, 1 )

[node name="Background" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
collision_layer = 2
collision_mask = 5
format = 1

[node name="Terrain" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
collision_layer = 2
collision_mask = 5
format = 1
script = ExtResource( 4 )

[node name="Checkpoints" type="Node2D" parent="."]

[node name="Objects" type="Node2D" parent="."]

[node name="Civilians" type="Node2D" parent="."]

[node name="Enemies" type="Node2D" parent="."]

[node name="Characters" type="Node2D" parent="."]

[node name="Player" parent="Characters" instance=ExtResource( 5 )]

[node name="Cutscenes" type="Node" parent="."]

[node name="GameCam" parent="." instance=ExtResource( 6 )]
current = true

[node name="Interface" parent="." instance=ExtResource( 7 )]
[connection signal="energy_changed" from="Characters/Player" to="." method="_on_Player_energy_changed"]
[connection signal="health_changed" from="Characters/Player" to="." method="_on_Player_health_changed"]
[connection signal="no_energy_left" from="Characters/Player" to="." method="_on_Player_no_energy_left"]
